# foedus_code

./: .gitignore  :q  :q:w  CMakeLists.txt  CTestCustom.cmake  CTestCustom.cmake.in  LICENSE.txt  README.markdown  aaa.diff  general_projects.cmake
experiments-core/: CMakeLists.txt  JoinTsv.java  README.markdown  summarizej.sh
experiments-core/include/foedus/: experiments_common.hpp
experiments-core/include/foedus/sssp/: sssp_client.hpp  sssp_client_chime.hpp  sssp_common.hpp  sssp_driver.hpp  sssp_hashtable.hpp  sssp_load.hpp  sssp_minheap.hpp  sssp_scheduler.hpp  sssp_schema.hpp
experiments-core/include/foedus/tpcc/: fwd.hpp  tpcc.hpp  tpcc_client.hpp  tpcc_driver.hpp  tpcc_load.hpp  tpcc_scale.hpp  tpcc_schema.hpp
experiments-core/include/foedus/tpce/: fwd.hpp  tpce.hpp  tpce_client.hpp  tpce_driver.hpp  tpce_load.hpp  tpce_scale.hpp  tpce_schema.hpp
experiments-core/include/foedus/ycsb/: ycsb.hpp
experiments-core/src/: CMakeLists.txt
experiments-core/src/foedus/: CMakeLists.txt
experiments-core/src/foedus/assorted/: CMakeLists.txt  imiss_experiment.cpp  l3miss_experiment.cpp  l3miss_multip_experiment.cpp  prefetch_experiment.cpp  std_sort_perf.cpp
experiments-core/src/foedus/graphlda/: CMakeLists.txt  lda.cpp  vocab.nips.txt
experiments-core/src/foedus/nvdimm/: CMakeLists.txt  nvdimm_test.cpp
experiments-core/src/foedus/snapshot/: CMakeLists.txt  compose_array_perf.cpp  compose_masstree_perf.cpp  partition_array_perf.cpp  partition_hash_perf.cpp  partition_masstree_perf.cpp
experiments-core/src/foedus/sssp/: CMakeLists.txt  README.markdown  bitswap_dump.cpp  sssp_client.cpp  sssp_client_analytic.cpp  sssp_client_chime.cpp  sssp_client_nav.cpp  sssp_datagen.cpp  sssp_driver.cpp  sssp_hashtable.cpp  sssp_load.cpp  sssp_querygen.cpp  sssp_schema.cpp
experiments-core/src/foedus/storage/: CMakeLists.txt
experiments-core/src/foedus/tpcc/: CMakeLists.txt  README.markdown  dragonhawk_memo.txt  hstore_memo.txt  hstore_tpcc_nvm.properties  run_common.sh  run_dl580.sh  run_dragonhawk.sh  run_gryphonhawk.sh  run_hcc.sh  run_hcc_dl580.sh  run_hcc_dragonhawk.sh  run_hcc_gryphonhawk.sh  run_hcc_z820.sh  run_hstore_common.sh  run_hstore_dl580.sh  run_hstore_dragonhawk.sh  run_hstore_nvm.sh  run_hstore_nvm_dragonhawk.sh  run_hstore_nvm_z820.sh  run_hstore_withlog.sh  run_hstore_withlog_dl580.sh  run_hstore_withlog_dragonhawk.sh  run_mid.sh  run_nvm.sh  run_nvm_dl580.sh  run_nvm_dragonhawk.sh  run_nvm_mid.sh  run_nvm_z820.sh  run_olap.sh  run_olap_dragonhawk.sh  run_olap_memo.txt  run_olap_mid.sh  run_olap_z820.sh  run_silo_dl580.sh  run_silo_dragonhawk.sh  run_withlog.sh  run_withlog_dl580.sh  run_withlog_dragonhawk.sh  run_withlog_mid.sh  (+14 more)
experiments-core/src/foedus/tpce/: CMakeLists.txt  README.markdown  run_dh.sh  run_hp840.sh  tpce.cpp  tpce_client.cpp  tpce_driver.cpp  tpce_load.cpp  tpce_schema.cpp  tpce_trade_order.cpp  tpce_trade_update.cpp
experiments-core/src/foedus/ycsb/: CMakeLists.txt  config_ycsb.sh  config_ycsb_f.sh  run_common.sh  run_dl580.sh  run_hp840.sh  run_ycsb_f_dh.sh  run_ycsb_f_dh_ro.sh  run_ycsb_f_dh_rw.sh  run_ycsb_f_dl580.sh  run_ycsb_f_dl580_ro.sh  run_ycsb_f_dl580_rw.sh  run_ycsb_f_dl580_tt.sh  run_ycsb_f_gh_ro.sh  run_ycsb_f_gh_rw.sh  run_ycsb_f_gh_tt.sh  run_ycsb_f_ro_common.sh  run_ycsb_f_rw_common.sh  run_ycsb_f_tt_common.sh  run_ycsb_f_z820_ro.sh  run_ycsb_f_z820_rw.sh  run_ycsb_s_common.sh  run_ycsb_s_dh.sh  run_ycsb_s_dl580.sh  run_ycsb_s_gh.sh  run_ycsb_s_z820.sh  run_ycsb_shifting_common.sh  run_ycsb_shifting_dh.sh  run_ycsb_shifting_dl580.sh  run_ycsb_shifting_gh.sh  run_ycsb_shifting_z820.sh  summarize.sh  ycsb.cpp  ycsb_client.cpp  ycsb_driver.cpp  ycsb_load.cpp
foedus-core/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE.txt  README.markdown  rpm.spec.cmake
foedus-core/cmake/: CpplintWrapper.cmake  FindGooglePerftools.cmake  FindNuma.cmake  FindPapi.cmake  WarnInSrcBuild.cmake
foedus-core/include/: CMakeLists.txt  mainpage.hpp
foedus-core/include/foedus/: CMakeLists.txt  armv8_support.hpp  assert_nd.hpp  attachable.hpp  compiler.hpp  cxx11.hpp  engine.hpp  engine_options.hpp  engine_pimpl.hpp  engine_type.hpp  epoch.hpp  error_code.hpp  error_code.xmacro  error_stack.hpp  error_stack_batch.hpp  fixed_error_stack.hpp  fwd.hpp  idioms.hpp  initializable.hpp  module_type.hpp  namespace-info.hpp
foedus-core/include/foedus/assorted/: assorted_func.hpp  atomic_fences.hpp  cacheline.hpp  const_div.hpp  dumb_spinlock.hpp  endianness.hpp  fixed_string.hpp  mod_numa_node.hpp  namespace-info.hpp  prob_counter.hpp  protected_boundary.hpp  raw_atomics.hpp  rich_backtrace.hpp  spin_until_impl.hpp  uniform_random.hpp  zipfian_random.hpp
foedus-core/include/foedus/cache/: cache_hashtable.hpp  cache_manager.hpp  cache_manager_impl.hpp  cache_manager_pimpl.hpp  cache_options.hpp  fwd.hpp  namespace-info.hpp  snapshot_file_set.hpp
foedus-core/include/foedus/debugging/: debugging_options.hpp  debugging_supports.hpp  fwd.hpp  namespace-info.hpp  papi_events.xmacro  papi_events_impl.hpp  rdtsc.hpp  rdtsc_waits.hpp  rdtsc_watch.hpp  stop_watch.hpp
foedus-core/include/foedus/externalize/: externalizable.hpp  namespace-info.hpp  tinyxml_wrapper.hpp
foedus-core/include/foedus/fs/: device_emulation_options.hpp  direct_io_file.hpp  filesystem.hpp  filesystem_options.hpp  fwd.hpp  (+2 more)
foedus-core/src/: CMakeLists.txt
foedus-core/src/foedus/: CMakeLists.txt  assert_nd.cpp  engine.cpp  engine_options.cpp  engine_pimpl.cpp  epoch.cpp  error_stack.cpp  error_stack_batch.cpp  fixed_error_stack.cpp  initializable.cpp
foedus-core/tools/: cpplint-wrapper.py  kdevtemplate.cpp  kdevtemplate.desktop  kdevtemplate.hpp  license_grep.rb  valgrind.supp
foedus-util/: CMakeLists.txt
foedus-util/src/: CMakeLists.txt
foedus-util/src/foedus/: CMakeLists.txt
tests-core/: CMakeLists.txt
tests-core/cmake/: FindValgrind.cmake
tests-core/include/foedus/: test_common.hpp
tests-core/src/foedus/: CMakeLists.txt  test_check_env.cpp  test_common.cpp  test_dummy.cpp  test_engine.cpp  test_engine_options.cpp  test_epoch.cpp  test_headers.cpp
(+543 files in other folders)
